update path to missing resources

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@ permalink: /404.html
             </div>
         </div>
         <div class="column">
-            <img class="desktop" src="/assets/images/404.png" alt="Page not found">
+            <img class="desktop" src="./assets/images/404.png" alt="Page not found">
         </div>
     </div>
 </header>
