--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Salsah
         </div>
         <div class="column">
             <div class="img-column">
-                <img class="desktop intro-image" src="/assets/images/digital-typewriter.png" alt="Digital Typewriter">
+                <img class="desktop intro-image" src="./assets/images/digital-typewriter.png" alt="Digital Typewriter">
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@ title: Salsah
     <div class="container">
         <div class="columns">
             <div>
-                <!--<img class="desktop shadow" src="/assets/images/annotations.jpg" alt="Work with humanities data">-->
+                <!--<img class="desktop shadow" src="./assets/images/annotations.jpg" alt="Work with humanities data">-->
             </div>
             <div>
                 <h2>{{ post.title }}</h2>
@@ -108,7 +108,7 @@ title: Salsah
 <div class="container">
     <div class="columns">
         <div>
-            <img class="desktop shadow" src="/assets/images/annotations.jpg" alt="Work with humanities data">
+            <img class="desktop shadow" src="./assets/images/annotations.jpg" alt="Work with humanities data">
         </div>
         <div>
             <h2>Create, Store, Share, and Work with Humanities Data</h2>
@@ -129,7 +129,7 @@ title: Salsah
                 of an image, and search for text markup across large numbers of texts.</p>
         </div>
         <div>
-            <img class="desktop shadow" src="/assets/images/search.jpg" alt="Find your data">
+            <img class="desktop shadow" src="./assets/images/search.jpg" alt="Find your data">
         </div>
     </div>
 </div>
