more on styling; navigation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Salsah
 ---
 
 
-<header>
+<section>
     <div class="container">
         <div class="column">
             <div>
@@ -28,7 +28,7 @@ title: Salsah
             </div>
         </div>
     </div>
-</header>
+</section>
 
 
 <div class="container">
