more on landing page; layout; styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Salsah
 
 <section>
     <div class="mdl-grid">
-        <div class="mdl-cell mdl-cell--8-col">
+        <div class="mdl-cell mdl-cell--7-col">
             <h1 class="mdl-typography--display-1">System for Annotation and Linkage of Sources in Arts and
                 Humanities</h1>
             <h2 class="mdl-typography--headline">Salsah is the generic user interface for <a href="{{ links.knora }}">Knora</a>,
@@ -20,72 +20,133 @@ title: Salsah
                 {% endfor %}
             </div>
         </div>
-        <div class="mdl-cell mdl-cell--4-col">
+        <div class="mdl-cell mdl-cell--5-col" style="position: relative">
             <img class="desktop-only intro-image" src="./assets/images/digital-typewriter.png" alt="Digital Typewriter">
         </div>
     </div>
 </section>
 
-
-<div class="container">
-    <h2 style="text-align: center;">Features</h2>
-    <ul class="thirds">
-        <li>
-            <div class="image">
+<section>
+    <h3 class="mdl-typography--display-1 mdl-typography--text-center">Features</h3>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp no-hidden-overflow mdl-typography--text-center">
+            <button class="mdl-button mdl-js-button mdl-button--fab card-topic">
                 <i class="material-icons">storage</i>
+            </button>
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Longevity of Humanities Data</h4>
             </div>
-            <!-- <h3>Ensures Longevity of Humanities Data</h3> -->
-            <h3>Longevity of Humanities Data</h3>
-            <p>Knora keeps data accessible and reusable, even as technologies change.</p>
-        </li>
-
-        <li>
-            <div class="image">
+            <div class="mdl-card__supporting-text">
+                <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                    Knora keeps data accessible and reusable, even as technologies change.
+                </p>
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp no-hidden-overflow mdl-typography--text-center">
+            <button class="mdl-button mdl-js-button mdl-button--fab card-topic">
                 <i class="material-icons">share</i>
+            </button>
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Citable and Reusable</h4>
             </div>
-            <!-- <h3>Makes Data Citable and Reusable</h3> -->
-            <h3>Citable and Reusable</h3>
-            <p>Anything in Knora can be annotated, cited, published as Linked Open Data, and reused in new research.</p>
-        </li>
-
-        <li>
-            <div class="image">
+            <div class="mdl-card__supporting-text">
+                <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                    Anything in Knora can be annotated, cited, published as Linked Open Data, and reused in new research.
+                </p>
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp no-hidden-overflow mdl-typography--text-center">
+            <button class="mdl-button mdl-js-button mdl-button--fab card-topic">
                 <i class="material-icons">search</i>
+            </button>
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Powerful Searches</h4>
             </div>
-            <h3>Powerful Searches</h3>
-            <p>Search for relationships between text, metadata, annotations, markup, links, and more.</p>
-        </li>
-    </ul>
-    <ul class="thirds">
-        <li>
-            <div class="image">
+            <div class="mdl-card__supporting-text">
+                <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                    Search for relationships between text, metadata, annotations, markup, links, and more.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp no-hidden-overflow mdl-typography--text-center">
+            <button class="mdl-button mdl-js-button mdl-button--fab card-topic">
                 <i class="material-icons">history</i>
+            </button>
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">History</h4>
             </div>
-            <h3>History</h3>
-            <p>When data changes, Knora preserves past versions, so you can still view and cite them.</p>
-        </li>
-
-        <li>
-            <div class="image">
+            <div class="mdl-card__supporting-text">
+                <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                    When data changes, Knora preserves past versions, so you can still view and cite them.
+                </p>
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp no-hidden-overflow mdl-typography--text-center">
+            <button class="mdl-button mdl-js-button mdl-button--fab card-topic">
                 <i class="material-icons">perm_identity</i>
+            </button>
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Control Access</h4>
             </div>
-            <h3>Control Access</h3>
-            <p>You decide who can view and change data in your project.</p>
-        </li>
-
-        <li>
-            <div class="image">
+            <div class="mdl-card__supporting-text">
+                <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                    You decide who can view and change data in your project.<br>&nbsp;
+                </p>
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--4-col mdl-card mdl-shadow--2dp no-hidden-overflow mdl-typography--text-center">
+            <button class="mdl-button mdl-js-button mdl-button--fab card-topic">
                 <i class="material-icons">web</i>
+            </button>
+            <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">User Interface</h4>
             </div>
-            <!-- <h3>Create Virtual Research Environments</h3> -->
-            <h3>Own app</h3>
-            <p>Use {{ site.links.salsah }}, or build your own research enviornment using Knora's API.</p>
-        </li>
-    </ul>
-</div>
+            <div class="mdl-card__supporting-text">
+                <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                    Easy to use (generic) web application. Or build your own app with {{ site.links.knora-ui }}.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
-<!-- TODO: Clearly say what Knora is -->
-<!-- e.g. in the container "Our Mission" (please replace the title) or in the next container with the class "quote" -->
+<section>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--5-col mdl-card__media">
+            <img class="desktop-only mdl-shadow--2dp" src="./assets/images/annotations.jpg" alt="Work with humanities data">
+        </div>
+        <div class="mdl-cell mdl-cell--7-col">
+            <h3 class="mdl-typography--display-1">Create, Store, Share, and Work with Humanities Data</h3>
+            <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                A Knora repository is a place for doing research. Knora can store texts, images, audio and video
+                recordings,
+                metadata, annotations, text markup, and any other data created by humanities research. It is designed
+                for
+                long-term preservation, and at the same time it provides powerful tools for searching, annotating,
+                extending,
+                linking, sharing, and reusing data.</p>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--7-col">
+            <h3 class="mdl-typography--display-1">Find and Link Data across Projects</h3>
+            <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
+                With Knora, you can search for and link data across projects, search for dates in
+                one calendar and find corresponding dates in other calendars, link a word in a text to an annotation of
+                part
+                of an image, and search for text markup across large numbers of texts.
+            </p>
+        </div>
+        <div class="mdl-cell mdl-cell--5-col mdl-card__media">
+            <img class="desktop-only mdl-shadow--2dp" src="./assets/images/search.jpg" alt="Find your data">
+        </div>
+    </div>
+</section>
 
 {% for post in site.features limit: 3 %}
 <div class="container">
@@ -100,60 +161,6 @@ title: Salsah
     </div>
 </div>
 {% endfor %}
-
-<div class="container">
-    <div class="columns">
-        <div>
-            <img class="desktop shadow" src="./assets/images/annotations.jpg" alt="Work with humanities data">
-        </div>
-        <div>
-            <h2>Create, Store, Share, and Work with Humanities Data</h2>
-            <p>A Knora repository is a place for doing research. Knora can store texts, images, audio and video
-                recordings,
-                metadata, annotations, text markup, and any other data created by humanities research. It is designed
-                for
-                long-term preservation, and at the same time it provides powerful tools for searching, annotating,
-                extending,
-                linking, sharing, and reusing data.</p>
-        </div>
-    </div>
-</div>
-<div class="container">
-    <hr>
-    <div class="columns">
-        <div>
-            <h2>Find and Link Data across Projects</h2>
-            <p>With Knora, you can search for and link data across projects, search for dates in
-                one calendar and find corresponding dates in other calendars, link a word in a text to an annotation of
-                part
-                of an image, and search for text markup across large numbers of texts.</p>
-        </div>
-        <div>
-            <img class="desktop shadow" src="./assets/images/search.jpg" alt="Find your data">
-        </div>
-    </div>
-</div>
-<!--
-
-<div class="container">
-    <hr>
-    <blockquote>
-        <p class="quote">Knora allows research projects to create their own data models, while ensuring that data from different projects
-            is interoperable. Each project builds its data model on Knora's basic, shared foundation, which is designed for
-            the humanities. This foundation includes a flexible way of storing text, which can have multiple, overlapping,
-            non-hierarchical structures. With Knora, you can search for and link data across projects, search for dates in
-            one calendar and find corresponding dates in other calendars, link a word in a text to an annotation of part
-            of an image, and search for text markup across large numbers of texts.
-            <div class="attribute">
-                <p class="meta">
-                    &lt;!&ndash; <span class="image"><img src="{{ site.baseurl }}/images/wooly.jpg" alt="Wooly"></span> &ndash;&gt;
-                    &lt;!&ndash; <span class="author"><strong>Wooly McBaa</strong></span> &ndash;&gt;
-                </p>
-            </div>
-    </blockquote>
-</div>
-
--->
 
 <div class="darker">
     <div class="container">
