--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Salsah
 ---
 
-
+<!-- introduction -->
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
@@ -20,12 +20,13 @@ title: Salsah
                 {% endfor %}
             </div>
         </div>
-        <div class="mdl-cell mdl-cell--5-col" style="position: relative">
+        <div class="mdl-cell mdl-cell--5-col mdl-cell--hide-phone" style="position: relative">
             <img class="desktop-only intro-image" src="./assets/images/digital-typewriter.png" alt="Digital Typewriter">
         </div>
     </div>
 </section>
 
+<!-- Features -->
 <section>
     <div class="section-content">
         <h3 class="mdl-typography--display-1 mdl-typography--text-center">Features</h3>
@@ -127,9 +128,10 @@ title: Salsah
     </div>
 </section>
 
+<!-- 1st short description -->
 <section>
     <div class="section-content mdl-grid">
-        <div class="mdl-cell mdl-cell--5-col mdl-card__media">
+        <div class="mdl-cell mdl-cell--5-col mdl-card__media mdl-cell--hide-phone">
             <img class="desktop-only mdl-shadow--2dp image-left" src="./assets/images/annotations.jpg" alt="Work with humanities data">
         </div>
         <div class="mdl-cell mdl-cell--7-col">
@@ -146,6 +148,7 @@ title: Salsah
     </div>
 </section>
 
+<!-- 2nd short description -->
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
@@ -157,7 +160,7 @@ title: Salsah
                 of an image, and search for text markup across large numbers of texts.
             </p>
         </div>
-        <div class="mdl-cell mdl-cell--5-col mdl-card__media">
+        <div class="mdl-cell mdl-cell--5-col mdl-card__media mdl-cell--hide-phone">
             <img class="desktop-only mdl-shadow--2dp image-right" src="./assets/images/search.jpg" alt="Find your data">
         </div>
     </div>
@@ -179,6 +182,7 @@ title: Salsah
 </div>
 {% endfor %}
 
+<!-- Contribute -->
 <section class="darker">
     <div class="section-content mdl-typography--text-center">
         <h3 class="mdl-typography--display-1">Contribute</h3>
@@ -189,7 +193,7 @@ title: Salsah
     </div>
 </section>
 
-<!--<div class="darker">-->
+<!-- News -->
 <section>
     <div class="section-content">
         <h3 class="mdl-typography--display-1 mdl-typography--text-center">News</h3>
