style (landing page): section styling

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@ title: Salsah
     </div>
 </section>
 
+<hr class="section-content">
+
 <!-- 2nd short description -->
 <section>
     <div class="section-content mdl-grid">
