--- a/search.html
+++ b/search.html
@@ -3,8 +3,17 @@ title: Search
 sitemap: false
 ---
 
-<p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
-<ul id="search-results"></ul>
+<section>
+    <div class="section-content">
+        <p>
+            <span id="search-process">Loading</span> results
+            <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span>
+        </p>
+
+        <ul id="search-results"></ul>
+
+    </div>
+</section>
 
 <script>
     window.data = {
@@ -28,5 +37,6 @@ sitemap: false
         {% endfor %}
     };
 </script>
+
 <script src="{{ site.baseurl }}/assets/scripts/lunr.min.js"></script>
 <script src="{{ site.baseurl }}/assets/scripts/search.js"></script>
