style (index): improved responsive design; add code styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Salsah
         <div class="mdl-cell mdl-cell--7-col">
             <h1 class="mdl-typography--display-1">System for Annotation and Linkage of Sources in Arts and
                 Humanities</h1>
-            <h2 class="mdl-typography--headline">Salsah is the generic user interface for <a href="{{ links.knora }}">Knora</a>,
+            <h2 class="mdl-typography--headline  smaller-headline">Salsah is the generic user interface for <a href="{{ links.knora }}">Knora</a>,
                 which is a software framework for storing, sharing, and working with primary sources and data in the
                 humanities.</h2>
             <div class="action">
@@ -29,7 +29,7 @@ title: Salsah
 <!-- Features -->
 <section>
     <div class="section-content">
-        <h3 class="mdl-typography--display-1 mdl-typography--text-center">Features</h3>
+        <h2 class="mdl-typography--display-1 mdl-typography--text-center">Features</h2>
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--4-col mdl-card simple-border no-hidden-overflow mdl-typography--text-center">
                 <div class="card-topic simple-border-bottom">
@@ -133,7 +133,7 @@ title: Salsah
             <img class="desktop-only mdl-shadow--2dp image-left" src="./assets/images/annotations.jpg" alt="Work with humanities data">
         </div>
         <div class="mdl-cell mdl-cell--7-col">
-            <h3 class="mdl-typography--display-1">Create, Store, Share, and Work with Humanities Data</h3>
+            <h2 class="mdl-typography--display-1">Create, Store, Share, and Work with Humanities Data</h2>
             <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
                 A Knora repository is a place for doing research. Knora can store texts, images, audio and video
                 recordings,
@@ -152,7 +152,7 @@ title: Salsah
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
-            <h3 class="mdl-typography--display-1">Find and Link Data across Projects</h3>
+            <h2 class="mdl-typography--display-1">Find and Link Data across Projects</h2>
             <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
                 With Knora, you can search for and link data across projects, search for dates in
                 one calendar and find corresponding dates in other calendars, link a word in a text to an annotation of
@@ -185,7 +185,7 @@ title: Salsah
 <!-- Contribute -->
 <section class="darker">
     <div class="section-content mdl-typography--text-center">
-        <h3 class="mdl-typography--display-1">Contribute</h3>
+        <h2 class="mdl-typography--display-1">Contribute</h2>
         <!-- <p style="text-align: center;">Test Knora today or improve the software</p> -->
         <a class="mdl-button mdl-js-button mdl-button--raised rounded mdl-typography--display-1" href="https://github.com/dhlab-basel/Knora">
             Code on GitHub
@@ -196,7 +196,7 @@ title: Salsah
 <!-- News -->
 <section>
     <div class="section-content">
-        <h3 class="mdl-typography--display-1 mdl-typography--text-center">News</h3>
+        <h2 class="mdl-typography--display-1 mdl-typography--text-center">News</h2>
         <div class="mdl-grid">
             {% for post in site.posts limit: 3 %}
             <div class="mdl-cell mdl-cell--4-col mdl-card simple-border no-hidden-overflow">
