clean up; add page logo

--- a/releasenotes.html
+++ b/releasenotes.html
@@ -19,9 +19,9 @@ layout: post
             </p>
 
             {{ change.content }}
-
+<!--
             <p class="editor-link"><a href="cloudcannon:collections/{{ change.path }}" class="btn"><strong>&#9998;</strong>
-                Update Entry</a></p>
+                Update Entry</a></p>-->
         </div>
         {% endfor %}
     </div>
