add manual section; fix styling issues in post and release notes

--- a/search.html
+++ b/search.html
@@ -4,17 +4,17 @@ sitemap: false
 layout: post
 ---
 
-<section>
+
     <div class="section-content">
-        <p>
-            <span id="search-process">Loading</span> results
+        <h2 class="mdl-typography--display-1 mdl-card__title-text">
+            <span id="search-process">Loading</span>&nbsp;results&nbsp;
             <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span>
-        </p>
+        </h2>
 
         <ul id="search-results"></ul>
 
     </div>
-</section>
+
 
 <script>
     window.data = {
