--- a/releasenotes.html
+++ b/releasenotes.html
@@ -3,26 +3,25 @@ title: Release Notes
 layout: post
 ---
 
-<!--
-<p>Subscribe with <a href="{{ site.baseurl }}/feed.xml">RSS</a> to keep up with the latest changes.</p>
--->
-<div class="section-content">
-    <!--<p>Subscribe on <a href="{{ site.git.url }}">{{site.git.title}}</a> to keep up with the latest changes.</p>-->
 
-    <!--<p class="editor-link"><a href="cloudcannon:collections/_posts" class="btn"><strong>&#9998;</strong> Update Change Log</a></p>-->
+    <div class="section-content no-padding-top">
+        {% for release in site.posts %}
+        <!-- post header -->
+        <h3 class="mdl-typography--headline mdl-card__subtitle-text">
+            <span class="date">{{ release.date | date: "%B %d, %Y" }}</span> | <span class="badge {{ change.type }}">{{ release.type }}</span>
+        </h3>
+        <h2 class="mdl-typography--display-1 mdl-card__title-text">{{ release.title }}</h2>
+        <br>
+        <!-- post content -->
+        {{ release.content }}
 
-    <div class="changelog">
-        {% for change in site.posts %}
-        <div class="changelog-item">
-            <h3>{{ change.title }}</h3>
-            <p><span class="date">{{ change.date | date: "%B %d, %Y" }}</span> <span class="badge {{ change.type }}">{{ change.type }}</span>
-            </p>
-
-            {{ change.content }}
-<!--
-            <p class="editor-link"><a href="cloudcannon:collections/{{ change.path }}" class="btn"><strong>&#9998;</strong>
-                Update Entry</a></p>-->
-        </div>
+        {% if release.link %}
+        <p class="center">
+            <br>
+            <a href={{ release.link }}>&rarr; Read more on GitHub</a>
+        </p>
+        {% endif %}
         {% endfor %}
+
     </div>
-</div>
+
