style: fix style issues in header and typography

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Salsah
 ---
 
 <!-- introduction -->
-<section class="padding-top">
+<section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
-            <h1 class="mdl-typography--display-1">System for Annotation and Linkage of Sources in Arts and
+            <h1 class="mdl-typography--display-13 mdl-typography--font-light">System for Annotation and Linkage of Sources in Arts and
                 Humanities</h1>
             <h2 class="mdl-typography--headline  smaller-headline">Salsah is the generic user interface for <a href="{{ links.knora }}">Knora</a>,
                 which is a software framework for storing, sharing, and working with primary sources and data in the
@@ -45,7 +45,7 @@ title: Salsah
             <img class="desktop-only mdl-shadow--2dp image-left" src="./assets/images/annotations.jpg" alt="Work with humanities data">
         </div>
         <div class="mdl-cell mdl-cell--7-col">
-            <h2 class="mdl-typography--display-1">Create, Store, Share, and Work with Humanities Data</h2>
+            <h2 class="mdl-typography--display-1 mdl-typography--font-light">Create, Store, Share, and Work with Humanities Data</h2>
             <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
                 A Knora repository is a place for doing research. Knora can store texts, images, audio and video
                 recordings,
@@ -64,7 +64,7 @@ title: Salsah
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--7-col">
-            <h2 class="mdl-typography--display-1">Find and Link Data across Projects</h2>
+            <h2 class="mdl-typography--display-1 mdl-typography--font-light">Find and Link Data across Projects</h2>
             <p class="mdl-typography--headline mdl-typography--font-light smaller-headline">
                 With Knora, you can search for and link data across projects, search for dates in
                 one calendar and find corresponding dates in other calendars, link a word in a text to an annotation of
