feature: more generic usage; use the description from config.yml

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@ title: Salsah
         <div class="mdl-cell mdl-cell--7-col">
             <h1 class="mdl-typography--display-13 mdl-typography--font-light">System for Annotation and Linkage of Sources in Arts and
                 Humanities</h1>
-            <h2 class="mdl-typography--headline  smaller-headline">Salsah is the generic user interface for <a href="{{ links.knora }}">Knora</a>,
-                which is a software framework for storing, sharing, and working with primary sources and data in the
-                humanities.</h2>
+            <h2 class="mdl-typography--headline  smaller-headline">{{site.description}}</h2>
             <div class="action">
                 {% assign grouped = site.docs | group_by: 'category' %}
                 {% for group in grouped %}
