feature: 404 error page; styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Salsah
             </div>
         </div>
         <div class="mdl-cell mdl-cell--5-col mdl-cell--hide-phone" style="position: relative">
-            <img class="desktop-only intro-image" src="./assets/images/digital-typewriter.png" alt="Digital Typewriter">
+            <img class="desktop-only intro-image" src="{{ site.baseurl }}/assets/images/digital-typewriter.png" alt="Digital Typewriter">
         </div>
     </div>
 </section>
@@ -40,7 +40,7 @@ title: Salsah
 <section>
     <div class="section-content mdl-grid">
         <div class="mdl-cell mdl-cell--5-col mdl-card__media mdl-cell--hide-phone">
-            <img class="desktop-only mdl-shadow--2dp image-left" src="./assets/images/annotations.jpg" alt="Work with humanities data">
+            <img class="desktop-only mdl-shadow--2dp image-left" src="{{ site.baseurl }}/assets/images/annotations.jpg" alt="Work with humanities data">
         </div>
         <div class="mdl-cell mdl-cell--7-col">
             <h2 class="mdl-typography--display-1 mdl-typography--font-light">Create, Store, Share, and Work with Humanities Data</h2>
@@ -71,7 +71,7 @@ title: Salsah
             </p>
         </div>
         <div class="mdl-cell mdl-cell--5-col mdl-card__media mdl-cell--hide-phone">
-            <img class="desktop-only mdl-shadow--2dp image-right" src="./assets/images/search.jpg" alt="Find your data">
+            <img class="desktop-only mdl-shadow--2dp image-right" src="{{ site.baseurl }}/assets/images/search.jpg" alt="Find your data">
         </div>
     </div>
 </section>
