--- a/404.html
+++ b/404.html
@@ -1,23 +1,23 @@
 ---
 layout: default
 title: Wrong way
-header_background_image: assets/images/404.jpg
+header_background_image: assets/images/404.png
 permalink: /404.html
 ---
 
-<header>
-    <div class="container">
-        <div class="column">
+<section>
+    <div class="mdl-grid section-content">
+        <div class="mdl-cell mdl-cell--7-col">
             <div>
-                <h1>Error 404<br>Page Not found</h1>
-                <p>The topic you are looking for does not exist in <a href="/">Salsah Documentation</a>.</p>
-                <div class="button">
-                    <a href="/">Return home</a>
+                <h1 class="mdl-typography--display-13 mdl-typography--font-light">Error 404<br>Page Not found</h1>
+                <h2 class="mdl-typography--headline  smaller-headline">The topic you are looking for does not exist in <a href="{{ site.baseurl }}/">{{ site.title }}</a>.</h2>
+                <div class="mdl-button mdl-js-button rounded">
+                    <a href="{{ site.baseurl }}/">&larr; Return home</a>
                 </div>
             </div>
         </div>
-        <div class="column">
-            <img class="desktop" src="./assets/images/404.png" alt="Page not found">
+        <div class="mdl-cell mdl-cell--5-col mdl-cell--hide-phone" style="position: relative">
+            <img class="desktop-only intro-image mdl-card__media" src="{{ site.baseurl }}/assets/images/404.png" alt="Page not found">
         </div>
     </div>
-</header>
+</section>
