--- a/releasenotes.html
+++ b/releasenotes.html
@@ -8,7 +8,7 @@ layout: post
         {% for release in site.posts %}
         <!-- post header -->
         <h3 class="mdl-typography--headline mdl-card__subtitle-text">
-            <span class="date">{{ release.date | date: "%B %d, %Y" }}</span> | <span class="badge {{ change.type }}">{{ release.type }}</span>
+            <span class="date">{{ release.date | date: "%B %d, %Y" }}</span> | <span class="badge {{ release.type }}">{{ release.type }}</span>
         </h3>
         <h2 class="mdl-typography--display-1 mdl-card__title-text">{{ release.title }}</h2>
         <br>
